# pyoctra

./: .envrc  .gitignore  MANIFEST.in  Makefile  README.md  flake.nix  justfile  pyoctra.nix  pyproject.toml  setup.py
examples/: dynarray_ex.py
pyoctra/: __init__.py  octra.py  poctra.py
pyoctra/octra/: octra_wrap.cpp
pyoctra/octra/c/: debug.h  dynarray.c  dynarray.h  linked_list.c  linked_list.h  octra_io.c  octra_io.h  single_link_node.h
pyoctra/octra/cxx/: all.hpp  circle.cpp  dynarray.cpp  dynarray.cxx  dynarray.hpp
pyoctra/swig_src/: pyoctra.i  pyoctra.py  pyoctra_wrap.c  pyoctra_wrap.cpp
pyoctra/swig_src/octra/: dynarray.c  dynarray.h
src/pyoctra/octra/: octra_wrap.cpp
src/pyoctra/octra/c/: all.h  debug.h  linked_list.h  single_link_node.c  single_link_node.h
src/pyoctra/octra/cxx/: circle.cpp  circle.hpp
