# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoctra"
version = "0.0.1" # TODO: get from cmake

[options]
package_dir = "pyoctra/octra"

[tool.setuptools]
ext-modules = [
  {name = "pyoctra._octra", sources = [ 'octrajs/octra/c/dynarray.c', 'octrajs/octra/c/linked_list.c', 'octrajs/octra/c/octra_io.c', 'octrajs/octra/c/single_link_node.c',  'octrajs/octra/cxx/circle.cpp', 'octrajs/octra/cxx/dynarray.cpp',  "pyoctra/octra/octra_wrap.cpp"], include-dirs = ["pyoctra/"]},
]

