# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoctra"
version = "0.0.1"

[options]
package_dir = "pyoctra/octra"

[tool.setuptools]
ext-modules = [
  {name = "pyoctra._octra", sources = [ 'src/pyoctra/octra/c/dynarray.c', 'src/pyoctra/octra/c/linked_list.c', 'src/pyoctra/octra/c/octra_io.c', 'src/pyoctra/octra/c/single_link_node.c',  'src/pyoctra/octra/cxx/circle.cpp', 'src/pyoctra/octra/cxx/dynarray.cpp',  "src/pyoctra/octra/octra_wrap.cpp"], include-dirs = ["src/pyoctra/"]},
]

